css/logo-nav.css
/* ... */
.lab-feature-card-header.code-console {
    background-color: #0288D1;
}

.lab-feature-card-header.terminal {
    background-color: #424242;
}

.lab-feature-card-header.text-editor {
    background-color: #455A64;
}

.lab-feature-card-header.themeable {
    background-image: url('../assets/jupyterlab-page/more-features/themeable-bg.svg');
    background-position-x: -1px;
    background-position-y: -1px;
}

.lab-feature-card-header.csv {
    background-color: #2E7D32;
}

.lab-feature-card-header.img-viewer {
    background-color: #1A237E;
}

.lab-feature-card-icon {
    margin: 0 auto;
}

.lab-feature-card-text {
    margin: 20px 24px 24px 24px;
}

.lab-collab-preview {
    display: none;
}

.lab-collab-preview.preview-active {
    display: flex;
    flex-direction: column;
}

.lab-collab-preview-img {
    margin: 0 auto;
}

.lab-collab-preview-text {
    text-align: center;
    margin-top: 32px;
    font-size: #424242;
}

.lab-collab-about {
    padding-left: 68px;
}

.lab-collab-about-desc {
    margin-bottom: 16px;
}

.lab-collab-coming-soon {
    color: white;
    background-color: #E37218;
    padding: 4px 12px;
    letter-spacing: .2px;
}

.lab-collab-preview {
    margin-top: 48px;
}

.lab-collab-preview-nav {
    position: relative;
    left: -20px;
    list-style: none;
    margin-top: 48px;
    padding-left: 0px;
    border-radius: 2px;
}

.lab-collab-preview-nav-item {
    font-size: 20px;
    padding: 20px;
    color: #424242;
    transition: .2s background-color;
}

.lab-collab-preview-nav-item:hover {
    cursor: pointer;
}

.lab-collab-preview-nav-item.nav-active {
    background-color: #E0E0E0;
    border-radius: 2px;
}

#collab-preview-tab-2 {
    height: 380px;
}

#collab-preview-tab-2 .lab-collab-preview-text{
    position: relative;
    top: -209px;
}

#collab-preview-tab-3 {
    margin-top: 0px;
}

#collab-preview-tab-2-img {
    position: relative;
    top: -209px;
    z-index: 0;
}

.lab-collab-cell-text {
    display: block;
    font-size: 16px;
    position: relative;
    left: 100px;
    z-index: 2;
}

#typeout-cell-1 span:nth-child(2)::after {
    content: 'John Adams';
    color: white;
    position: relative;
    top: -16px;
    left: -3px;
    background-color: #2196F3;
    padding: 1px 4px;
}

#typeout-cell-2 span:nth-child(2)::after {
    content: 'Cary Jones';
    color: white;
    position: relative;
    top: -16px;
    left: -3px;
    background-color: #BB4430;
    padding: 1px 4px;
}

.lab-collab-cell-1-text {
    top: 30px;
}

.lab-collab-cell-2-text {
    top: 43px;
}

.lab-collab-cell-output {
    display: block;
    position: relative;
    z-index: 2;
    top: 68px;
    left: 31px;
    opacity: 0;
}

.lab-collab-realtime-img-mobile {
    display: none;   
}

.lab-collab-chat-img-container {
    display: block;
    overflow: hidden;
}

.lab-collab-chat-entry {
    position: relative;
    z-index: 0;
}

#lab-collab-chat-entry-1 {
    float: right;
    top: 140px;
}

#lab-collab-chat-entry-2 {
    float: left;
    top: 116px;
}

.lab-collab-chat-text {
    position: relative;
    z-index: 2;
    color: #757575;
}

.lab-collab-chat-text-1 {
    top: 92px;
    left: 34px;
}

.lab-collab-chat-text-2 {
    top: 92px;
    left: 112px;
    max-width: 175px;
    min-height: 48px;
}

.lab-collab-chat-entry-bubble-1, .lab-collab-chat-entry-bubble-2, .lab-collab-chat-entry-circle-1, .lab-collab-chat-entry-circle-2, .lab-collab-chat-text {
    position: relative;
}

.lab-collab-chat-entry-bubble-1 {
    left: 6px;
}

.lab-collab-chat-entry-circle-1 {
    top: 69px;
}

.lab-collab-chat-entry-bubble-2 {
    right: 4px;
}

.lab-collab-chat-entry-circle-2 {
    top: 64px;
}

.lab-native {
    background-image: url("../assets/lab-native-bg-img.png");
    background-size: cover;
    background-position: center 168px;
    background-repeat: no-repeat;
    max-width: 1200px;
}

.lab-native-img {
    max-width: 800px;
    margin: auto;
}

.lab-native-features {
    max-width: 800px;
    margin: auto;
    margin-top: 56px;
}

.lab-native-feature {
    text-align: center;
    margin-top: 48px;
}

.lab-native-feature-header {
    margin-top: 24px;
    margin-bottom: 12px;
    font-weight: 500;
}

.lab-native-download {
    display: flex;
    margin-top: 24px;
}

.lab-native-download-btn {
    margin: 0 auto;
}

/* Bootstrap Breakpoint Media Queries */
@media (max-width: 1200px) {
    .nb-highlight-text {
        margin-top: 32px;
    }
    .notebook-features .language-set h2{
        padding-top: 0;
    }
    .notebook-features #feature {
        padding-top: 4px;
    }
    .notebook-preview p {
        font-size: 15pt;
        line-height: 25pt;
    }
    .companies li{
        width:23%;
    }
}
/* ... */

